--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Nacional</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-       <!-- Header -->
+       <!-- HEADER -->
        <div class="container header">
         <div class="row">
             <div class="col-lg-4">
@@ -20,7 +20,7 @@
             <div class="col-lg-4"></div>
             <div class="col-lg-4 item-play">
                 <div class="play">
-                    <i class="fa-sharp fa-regular  fa-circle-play" style="color: #000000;"></i>
+                    <i class="fa-sharp fa-regular  fa-circle-play"></i>
                 </div>
                 <div class="radio-info">
                     <span class="radio-frequency">RADIO NACIONAL 85.7 FM</span>
@@ -29,8 +29,18 @@
             </div>
         </div>
        </div>
-       
-    </div>
+       <!-- NAVBAR -->
+       <div class="navbar">
+            <div class="wrapper">
+                <a href="#" class="underline" title="Actualidad">Actualidad</a>
+                <a href="#" class="underline" title="Política">Politica</a>
+                <a href="#" class="underline" title="Mundo">Mundo</a>
+                <a href="#" class="underline" title="Deportes">Deportes</a>
+                <a href="#" class="underline" title="Economía">Economía</a>
+                <a href="#" class="underline" title="Cultural">Cultural</a>
+            </div>
+        </div>
+
 </body>
 </html>
 
