--- a/index.html
+++ b/index.html
@@ -46,6 +46,36 @@
             <div class="title-section">
                 <span class="text"></span>
             </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="https://statics.exitosanoticias.pe/2023/04/crop/6436fd3b1fa24__940x492.webp" class="img-fluid" alt="most-read-1">
+                    <div class="info">
+                        <h3 class="title"><a href="">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
+                        <span class="date">25/04/2023</span>
+                        <h5 class="abstract">Real Madrid impuso su localía, venciendo 2-0 a Chelsea en la ida de los cuartos de final de la UEFA Champions League. Karim Benzema y Marco Asensio marcaron en la victoria merengue.
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <img src="https://statics.exitosanoticias.pe/2023/04/crop/64381c61adc48__940x492.webp" class="img-fluid" alt="most-read-1">
+                    <div class="info">
+                        <h3 class="title"><a href="">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
+                        <span class="date">25/04/2023</span>
+                        <h5 class="abstract">Real Madrid impuso su localía, venciendo 2-0 a Chelsea en la ida de los cuartos de final de la UEFA Champions League. Karim Benzema y Marco Asensio marcaron en la victoria merengue.
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <img src="https://statics.exitosanoticias.pe/2023/04/crop/64372fc51ba8a__940x492.webp" class="img-fluid" alt="most-read-1">
+                    <div class="info">
+                        <h3 class="title"><a href="">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
+                        <span class="date">25/04/2023</span>
+                        <h5 class="abstract">Real Madrid impuso su localía, venciendo 2-0 a Chelsea en la ida de los cuartos de final de la UEFA Champions League. Karim Benzema y Marco Asensio marcaron en la victoria merengue.
+                        </h5>
+                    </div>
+                </div>
+                
+            </div>
         </div>
 </body>
 </html>
