--- a/index.html
+++ b/index.html
@@ -50,31 +50,40 @@
                 <div class="col-lg-4">
                     <img src="https://statics.exitosanoticias.pe/2023/04/crop/6436fd3b1fa24__940x492.webp" class="img-fluid" alt="most-read-1">
                     <div class="info">
-                        <h3 class="title"><a href="">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
-                        <span class="date">25/04/2023</span>
-                        <h5 class="abstract">Real Madrid impuso su localía, venciendo 2-0 a Chelsea en la ida de los cuartos de final de la UEFA Champions League. Karim Benzema y Marco Asensio marcaron en la victoria merengue.
+                        <h3 class="title"><a href="" class="underline">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
+                        <span class="date">12/04/2023</span>
+                        <h5 class="abstract">EsSalud informó que la enfermera perdió la vida esta mañana. Además, extendieron sus condolencias a los familiares de la víctima.
                         </h5>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <img src="https://statics.exitosanoticias.pe/2023/04/crop/64381c61adc48__940x492.webp" class="img-fluid" alt="most-read-1">
                     <div class="info">
-                        <h3 class="title"><a href="">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
-                        <span class="date">25/04/2023</span>
-                        <h5 class="abstract">Real Madrid impuso su localía, venciendo 2-0 a Chelsea en la ida de los cuartos de final de la UEFA Champions League. Karim Benzema y Marco Asensio marcaron en la victoria merengue.
+                        <h3 class="title"><a href="" class="underline">Arequipa: Escolar muere en extrañas circunstancias mientras jugaba fútbol en patio de su colegio</a></h3>
+                        <span class="date">13/04/2023</span>
+                        <h5 class="abstract">Un estudiante de 14 años perdió la vida en medio de un partido de fútbol en el colegio Cristo Rey de Arequipa. Hasta el momento, la familia ha recibido al menos tres versiones de lo sucedido.
                         </h5>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <img src="https://statics.exitosanoticias.pe/2023/04/crop/64372fc51ba8a__940x492.webp" class="img-fluid" alt="most-read-1">
                     <div class="info">
-                        <h3 class="title"><a href="">¡Lamentable! Falleció joven enfermera víctima de violación sexual grupal en Puno</a></h3>
+                        <h3 class="title"><a href="" class="underline">¡Victoria merengue! Real Madrid venció 2-0 a Chelsea por la ida de los cuartos de final de la UEFA Champions League</a></h3>
                         <span class="date">25/04/2023</span>
                         <h5 class="abstract">Real Madrid impuso su localía, venciendo 2-0 a Chelsea en la ida de los cuartos de final de la UEFA Champions League. Karim Benzema y Marco Asensio marcaron en la victoria merengue.
                         </h5>
                     </div>
+                </div> 
+            </div>
+        </div>
+        <!-- SOCIAL NETWORKS -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 social-networks">
+                    <div class="title-section">
+                        <span class="text"></span>
+                    </div>
                 </div>
-                
             </div>
         </div>
 </body>
