--- a/index.html
+++ b/index.html
@@ -79,9 +79,44 @@
         <!-- SOCIAL NETWORKS -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 social-networks">
+                <div class="col-lg-2 social-networks">
                     <div class="title-section">
                         <span class="text"></span>
+                    </div>
+                    <div class="media-module">
+                        <a href="#" class="fb">
+                            <span class="ico"><i class="fab fa-facebook"></i></span>
+                            <span class="red">Facebook</span>
+                        </a>
+                        <a href="#" class="tw">
+                            <span class="ico"><i class="fab fa-twitter"></i></span>
+                            <span class="red">Twitter</span>
+                        </a>
+                        <a href="#" class="yt">
+                            <span class="ico"><i class="fab fa-youtube"></i></span>
+                            <span class="red">Youtube</span>
+                        </a>
+                        <a href="#" class="tk">
+                            <span class="ico"><i class="fab fa-tiktok"></i></span>
+                            <span class="red">TikTok</span>
+                        </a>
+                        <a href="#" class="ig">
+                            <span class="ico"><i class="fab fa-instagram"></i></span>
+                            <span class="red">Instagram</span>
+                        </a>
+                        <a href="#" class="gn">
+                            <span class="ico"><i class="fab fa-google"></i></span>
+                            <span class="red">Google News</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-10 categories">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="title-category">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
