--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <div class="navbar">
             <div class="wrapper">
                 <a href="#" class="underline" title="Actualidad">Actualidad</a>
-                <a href="#" class="underline" title="Política">Politica</a>
+                <a href="#" class="underline" title="Política">Política</a>
                 <a href="#" class="underline" title="Mundo">Mundo</a>
                 <a href="#" class="underline" title="Deportes">Deportes</a>
                 <a href="#" class="underline" title="Economía">Economía</a>
@@ -112,9 +112,40 @@
                 </div>
                 <div class="col-lg-10 categories">
                     <div class="row">
-                        <div class="col-lg-4">
-                            <div class="title-category">
-
+                        <div class="col-lg-4 current-news">
+                            <div class="title-section">
+                                <span class="text"></span>
+                                <a href="#" class="more-information" title="Actualidad">Ver más</a>                            
+                            </div>
+                        </div>
+                        <div class="col-lg-4 politics">
+                            <div class="title-section">
+                                <span class="text"></span>
+                                <a href="#" class="more-information" title="Política">Ver más</a>                            
+                            </div>
+                        </div>
+                        <div class="col-lg-4 world">
+                            <div class="title-section">
+                                <span class="text"></span>
+                                <a href="#" class="more-information" title="Mundo">Ver más</a>                            
+                            </div>
+                        </div>
+                        <div class="col-lg-4 sports">
+                            <div class="title-section">
+                                <span class="text"></span>
+                                <a href="#" class="more-information" title="Deportes">Ver más</a>                            
+                            </div>
+                        </div>
+                        <div class="col-lg-4 economy">
+                            <div class="title-section">
+                                <span class="text"></span>
+                                <a href="#" class="more-information" title="Economía">Ver más</a>                            
+                            </div>
+                        </div>
+                        <div class="col-lg-4 cultural">
+                            <div class="title-section">
+                                <span class="text"></span>
+                                <a href="#" class="more-information" title="Cultural">Ver más</a>                            
                             </div>
                         </div>
                     </div>
