noti-box for categories

--- a/index.html
+++ b/index.html
@@ -117,36 +117,132 @@
                                 <span class="text"></span>
                                 <a href="#" class="more-information" title="Actualidad">Ver más</a>                            
                             </div>
+                            <article class="noti-box">
+                                <figure>
+                                    <a href="">
+                                        <picture>
+                                            <source>
+                                            <img src="https://statics.exitosanoticias.pe/2023/04/crop/643ae5dba3cd3__940x492.webp" alt="actualidad" class="img-fluid">
+                                        </picture>
+                                    </a>
+                                </figure>
+                                <div class="info">
+                                    <h2 class="title">
+                                        <a href="#">Intensas lluvias en Perú: La NASA explica causas por las que se calentó el océano Pacífico</a>
+                                    </h2>
+                                    <!-- <span class="category">Actualidad</span> -->
+                                </div>
+                            </article>
                         </div>
                         <div class="col-lg-4 politics">
                             <div class="title-section">
                                 <span class="text"></span>
                                 <a href="#" class="more-information" title="Política">Ver más</a>                            
                             </div>
+                            <article class="noti-box">
+                                <figure>
+                                    <a href="">
+                                        <picture>
+                                            <source>
+                                            <img src="https://statics.exitosanoticias.pe/2023/03/crop/6425947a3958f__940x492.webp" alt="actualidad" class="img-fluid">
+                                        </picture>
+                                    </a>
+                                </figure>
+                                <div class="info">
+                                    <h2 class="title">
+                                        <a href="#">Dina Boluarte: El 57% de los peruanos no cree que su Gobierno dure hasta 2026, según encuesta Datum</a>
+                                    </h2>
+                                    <!-- <span class="category">Actualidad</span> -->
+                                </div>
+                            </article>
                         </div>
                         <div class="col-lg-4 world">
                             <div class="title-section">
                                 <span class="text"></span>
                                 <a href="#" class="more-information" title="Mundo">Ver más</a>                            
                             </div>
+                            <article class="noti-box">
+                                <figure>
+                                    <a href="">
+                                        <picture>
+                                            <source>
+                                            <img src="https://statics.exitosanoticias.pe/2023/04/crop/64398b78150d6__940x492.webp" alt="actualidad" class="img-fluid">
+                                        </picture>
+                                    </a>
+                                </figure>
+                                <div class="info">
+                                    <h2 class="title">
+                                        <a href="#">Joe Biden concluye su viaje a Irlanda en la tierra de sus ancestros</a>
+                                    </h2>
+                                    <!-- <span class="category">Actualidad</span> -->
+                                </div>
+                            </article>
                         </div>
                         <div class="col-lg-4 sports">
                             <div class="title-section">
                                 <span class="text"></span>
                                 <a href="#" class="more-information" title="Deportes">Ver más</a>                            
                             </div>
+                            <article class="noti-box">
+                                <figure>
+                                    <a href="">
+                                        <picture>
+                                            <source>
+                                            <img src="https://statics.exitosanoticias.pe/2023/04/crop/643aaa53ec3d0__940x492.webp" alt="actualidad" class="img-fluid">
+                                        </picture>
+                                    </a>
+                                </figure>
+                                <div class="info">
+                                    <h2 class="title">
+                                        <a href="#">"Driblea como mago": Roger Federer llena de elogios a Lionel Messi tras ser nombrado una de las personas más influyentes del mundo</a>
+                                    </h2>
+                                    <!-- <span class="category">Actualidad</span> -->
+                                </div>
+                            </article>
                         </div>
                         <div class="col-lg-4 economy">
                             <div class="title-section">
                                 <span class="text"></span>
                                 <a href="#" class="more-information" title="Economía">Ver más</a>                            
                             </div>
+                            <article class="noti-box">
+                                <figure>
+                                    <a href="">
+                                        <picture>
+                                            <source>
+                                            <img src="https://statics.exitosanoticias.pe/2023/03/crop/640a013d245e1__940x492.webp" alt="actualidad" class="img-fluid">
+                                        </picture>
+                                    </a>
+                                </figure>
+                                <div class="info">
+                                    <h2 class="title">
+                                        <a href="#">Congreso: Aprueban bono de reconocimiento para los aportantes de la ONP</a>
+                                    </h2>
+                                    <!-- <span class="category">Actualidad</span> -->
+                                </div>
+                            </article>
                         </div>
                         <div class="col-lg-4 cultural">
                             <div class="title-section">
                                 <span class="text"></span>
                                 <a href="#" class="more-information" title="Cultural">Ver más</a>                            
                             </div>
+                            <article class="noti-box">
+                                <figure>
+                                    <a href="">
+                                        <picture>
+                                            <source>
+                                            <img src="https://statics.exitosanoticias.pe/2023/03/crop/64247fef10cbd__940x492.webp" alt="actualidad" class="img-fluid">
+                                        </picture>
+                                    </a>
+                                </figure>
+                                <div class="info">
+                                    <h2 class="title">
+                                        <a href="#">Cusco: Restauran mapa del Perú de 1862 que fue elaborado por orden de Ramón Castilla</a>
+                                    </h2>
+                                    <!-- <span class="category">Actualidad</span> -->
+                                </div>
+                            </article>
                         </div>
                     </div>
                 </div>
