--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
        <!-- HEADER -->
-       <div class="container header">
+       <header class="container header">
         <div class="row">
             <div class="col-lg-4">
                 <img src="./img/logo.png" class="logo img-fluid" alt="Logo Radio Nacional">
@@ -29,9 +29,9 @@
                 </div>
             </div>
         </div>
-       </div>
+       </header>
        <!-- NAVBAR -->
-       <div class="navbar">
+       <nav class="navbar">
             <div class="wrapper">
                 <a href="#" class="underline" title="Actualidad">Actualidad</a>
                 <a href="#" class="underline" title="Política">Política</a>
@@ -40,9 +40,9 @@
                 <a href="#" class="underline" title="Economía">Economía</a>
                 <a href="#" class="underline" title="Cultural">Cultural</a>
             </div>
-        </div>
+        </nav>
         <!-- MOST READ  -->
-        <div class="container most-read">
+        <section class="container most-read">
             <div class="title-section">
                 <span class="text"></span>
             </div>
@@ -75,9 +75,9 @@
                     </div>
                 </div> 
             </div>
-        </div>
-        <!-- SOCIAL NETWORKS -->
-        <div class="container">
+        </section>
+        <!-- SOCIAL NETWORKS & CATEGORIES -->
+        <section class="container">
             <div class="row">
                 <div class="col-lg-2 social-networks">
                     <div class="title-section">
@@ -247,7 +247,36 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- PODCAST -->
+        <div class="podcast">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 info">
+                        <h4 class="text-info-podcast">ESCUCHA NUESTROS PODCAST EN</h4>
+                        <div class="logos">
+                            <a href="#" title="Escuchalo en Apple Podcast" target="_blank">
+                                <img src="https://statics.exitosanoticias.pe/exitosa/img/global/logo-apple.svg">
+                            </a> 
+                            <a href="#" title="Escuchalo en Spotify" target="_blank">
+                                <img src="https://statics.exitosanoticias.pe/exitosa/img/global/logo-spotify.svg">
+                            </a> 
+                            <a href="#" title="Escuchalo en Google" target="_blank">
+                                <img src="https://statics.exitosanoticias.pe/exitosa/img/global/logo-google-podcast.svg">
+                            </a> 
+                        </div> 
+                    </div>
+                    <div class="col-lg-6 logo-podcast">
+                        <svg width="350px" height="350px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="#ff0216"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>ionicons-v5-p</title><circle cx="256" cy="256.02" r="32"></circle><path d="M184.25,192.25a96,96,0,0,0,0,127.52" style="fill:none;stroke:#ff0216;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></path><path d="M327.77,319.77a96,96,0,0,0,0-127.52" style="fill:none;stroke:#ff0216;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></path><path d="M133.28,141.28a168,168,0,0,0,0,229.44" style="fill:none;stroke:#ff0216;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></path><path d="M378.72,370.72a168,168,0,0,0,0-229.44" style="fill:none;stroke:#ff0216;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></path><path d="M435,416a240.34,240.34,0,0,0,0-320" style="fill:none;stroke:#ff0216;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></path><path d="M77,96a240.34,240.34,0,0,0,0,320" style="fill:none;stroke:#ff0216;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></path></g></svg>
+                        <h3 class="title-podcast">RNE NOTICIAS</h3>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- FOOTER -->
+        <footer class="">
+
+        </footer>
 </body>
 </html>
 
