--- a/index.html
+++ b/index.html
@@ -274,8 +274,10 @@
             </div>
         </div>
         <!-- FOOTER -->
-        <footer class="">
-
+        <footer class="footer">
+            <div class="content-footer">
+                <p class="copyright">© 2023 Corporación Universal Derechos Reservados</p>
+            </div>
         </footer>
 </body>
 </html>
