--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                 <a href="#" class="underline" title="Cultural">Cultural</a>
             </div>
         </nav>
+
+        <!-- WHATSAPP-BUTTON -->
+        <div class="whatsapp-button">
+            <a href="#"><img src="./img/whatsapp.png" alt="wsp-btn" class="img-fluid"></a>
+        </div>
+
         <!-- MOST READ  -->
         <section class="container most-read">
             <div class="title-section">
